--- a/ML CSE21205 LAB-8.ipynb
+++ b/ML CSE21205 LAB-8.ipynb
@@ -3,13 +3,8 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "hJfcMRlbKR1B",
-    "outputId": "8f9aeb65-a62d-416b-9e3d-81dfcd8afe3e"
-   },
+   "id": "262279a9",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -24,7 +19,6 @@
     }
    ],
    "source": [
-    "#A1\n",
     "import pandas as pd\n",
     "\n",
     "data = {\n",
@@ -49,14 +43,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "fEO42nIFziDM",
-    "outputId": "7b1970dc-9c08-4f7b-f2c1-2874d62ffbe3"
-   },
+   "execution_count": 5,
+   "id": "ab95e585",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -101,7 +90,6 @@
     }
    ],
    "source": [
-    "#A2\n",
     "import pandas as pd\n",
     "\n",
     "data = {\n",
@@ -130,53 +118,26 @@
     "\n",
     "for feature, density in class_conditional_densities.items():\n",
     "    if density.isnull().any():\n",
-    "        print(f\"At least one class-conditional density for '{feature}' has zero values.\")\n"
+    "        print(f\"At least one class-conditional density for '{feature}' has zero values.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "xWwYJ_E2z8wG",
-    "outputId": "317ba82a-3408-456f-dafb-2f06eeb32d5c"
-   },
+   "execution_count": 6,
+   "id": "9ac21f46",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test between 'age' and 'income':\n",
-      "statistic: 3.3249999999999997\n",
-      "P-value: 0.5049810026322079\n",
-      "\n",
-      "test between 'age' and 'student':\n",
-      "statistic: 0.4\n",
-      "P-value: 0.8187307530779818\n",
-      "\n",
-      "test between 'age' and 'credit_rating':\n",
-      "statistic: 0.11666666666666664\n",
-      "P-value: 0.9433354498734922\n",
-      "\n",
-      "test between 'income' and 'student':\n",
-      "statistic: 5.666666666666666\n",
-      "P-value: 0.05881647164242991\n",
-      "\n",
-      "test between 'income' and 'credit_rating':\n",
-      "statistic: 0.7291666666666666\n",
-      "P-value: 0.6944859597510076\n",
-      "\n",
-      "test between 'student' and 'credit_rating':\n",
-      "statistic: 0.0\n",
-      "P-value: 1.0\n",
-      "\n"
+      "Chi-square Statistic: 25.200000000000003\n",
+      "P-value: 0.3949583040945451\n",
+      "Degrees of Freedom: 24\n"
      ]
     }
    ],
    "source": [
-    "#A3\n",
     "import pandas as pd\n",
     "from scipy.stats import chi2_contingency\n",
     "\n",
@@ -195,36 +156,32 @@
     "\n",
     "df = pd.DataFrame(data)\n",
     "\n",
-    "features = ['age', 'income', 'student', 'credit_rating']\n",
+    "# Create contingency table (cross-tabulation) for selected columns\n",
+    "#The chi-square test for independence is a statistical method used to determine if there is a significant association between categorical variables by comparing \n",
+    "#observed and expected frequencies in a contingency table. If the test shows a low p-value (< 0.05), it suggests that the variables are dependent.\n",
+    "contingency_table = pd.crosstab(df['age'], [df['income'], df['student'], df['credit_rating'], df['buys_computer']])\n",
     "\n",
-    "for i in range(len(features)):\n",
-    "    for j in range(i + 1, len(features)):\n",
-    "        contingency_table = pd.crosstab(df[features[i]], df[features[j]])\n",
-    "        chi2, p, dof, expected = chi2_contingency(contingency_table)\n",
-    "        print(f\"test between '{features[i]}' and '{features[j]}':\")\n",
-    "        print(f\"statistic: {chi2}\")\n",
-    "        print(f\"P-value: {p}\")\n",
-    "        print(\"\")\n",
-    "\n"
+    "# Perform chi-square test of independence\n",
+    "chi2, p, dof, expected = chi2_contingency(contingency_table)\n",
+    "\n",
+    "# Display results\n",
+    "print(f\"Chi-square Statistic: {chi2}\")\n",
+    "print(f\"P-value: {p}\")\n",
+    "print(f\"Degrees of Freedom: {dof}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "xVHF2-8pzdGl",
-    "outputId": "74b95b07-aeb7-45cc-f315-6a386c54348a"
-   },
+   "execution_count": 7,
+   "id": "8f65c07a",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
-      "A4: Naïve-Bayes Classifier Test Set Accuracy: 0.6666666666666666\n"
+      "Naïve-Bayes Classifier Test Set Accuracy: 0.6666666666666666\n"
      ]
     }
    ],
@@ -258,52 +215,44 @@
     "# Split the dataset into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "\n",
-    "# A4: Build a Naïve-Bayes classifier\n",
-    "model_a4 = GaussianNB()\n",
-    "model_a4.fit(X_train, y_train)\n",
+    "# Build a Naïve-Bayes classifier\n",
+    "model = GaussianNB()\n",
+    "model.fit(X_train, y_train)\n",
     "\n",
     "# Make predictions on the test set\n",
-    "predictions = model_a4.predict(X_test)\n",
+    "predictions = model.predict(X_test)\n",
     "\n",
     "# Calculate accuracy of the predictions\n",
-    "accuracy_a4 = accuracy_score(y_test, predictions)\n",
+    "accuracy = accuracy_score(y_test, predictions)\n",
     "\n",
-    "\n",
-    "print(\"\\nA4: Naïve-Bayes Classifier Test Set Accuracy:\", accuracy_a4)"
+    "print(\"\\nNaïve-Bayes Classifier Test Set Accuracy:\", accuracy)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "Mm5OiCi30dPd",
-    "outputId": "2a50655c-3e83-4c54-b97a-b90de178b179"
-   },
+   "execution_count": 11,
+   "id": "b84b2094",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.006340579710144928\n"
+      "0.23731884057971014\n"
      ]
     }
    ],
    "source": [
-    "#A5 1st dataset\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
     "# Load the dataset\n",
-    "dataset = pd.read_csv('Telugu_Char_Gabor_.csv')\n",
+    "data = pd.read_csv('Telugu_Char_Gabor_.csv')\n",
     "\n",
     "# Separate the features and labels\n",
-    "X = dataset[['Theta0_Lambda1_MeanAmplitude']]\n",
-    "y = dataset['Theta0_Lambda1_LocalEnergy']\n",
+    "X = data.drop(columns=['ImageName','Label'])\n",
+    "y = data['Label']\n",
     "\n",
     "# Split the data into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
@@ -321,28 +270,19 @@
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "\n",
     "# Print the accuracy\n",
-    "print(accuracy)\n"
+    "print(accuracy)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "id": "6874a068",
    "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
-  "colab": {
-   "provenance": []
-  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
@@ -362,5 +302,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 5
 }
